After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731949 - Memory leak from gdata_parser_int64_to_iso8601()
Memory leak from gdata_parser_int64_to_iso8601()
Status: RESOLVED FIXED
Product: libgdata
Classification: Platform
Component: General
0.15.x
Other Linux
: Normal normal
: ---
Assigned To: libgdata-maint
libgdata-maint
Depends on:
Blocks:
 
 
Reported: 2014-06-20 08:42 UTC by Milan Crha
Modified: 2014-06-20 09:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
core: Fix a small memory leak in a date parsing function (725 bytes, patch)
2014-06-20 09:50 UTC, Philip Withnall
committed Details | Review

Description Milan Crha 2014-06-20 08:42:09 UTC
As reported by valgrind:

==20266== 42 bytes in 2 blocks are definitely lost in loss record 4,695 of 8,982
==20266==    at 0x4A0645D: malloc (in /usr/lib64/valgrind/vgpreload_memcheck-amd64-linux.so)
==20266==    by 0x33E170654F: __vasprintf_chk (in /usr/lib64/libc-2.18.so)
==20266==    by 0x33E4289D5B: g_vasprintf (in /usr/lib64/libglib-2.0.so.0.3800.2)
==20266==    by 0x33E42668AC: g_strdup_vprintf (in /usr/lib64/libglib-2.0.so.0.3800.2)
==20266==    by 0x33E4266968: g_strdup_printf (in /usr/lib64/libglib-2.0.so.0.3800.2)
==20266==    by 0x33E4270744: g_time_val_to_iso8601 (in /usr/lib64/libglib-2.0.so.0.3800.2)
==20266==    by 0x12FBE088: gdata_parser_int64_to_iso8601 (gdata-parser.c:248)
==20266==    by 0x12FBE0A2: gdata_parser_int64_to_json_iso8601 (gdata-parser.c:259)
==20266==    by 0x13030077: get_json (gdata-tasks-task.c:354)
==20266==    by 0x12FC4AE8: _gdata_parsable_get_json (gdata-parsable.c:727)
==20266==    by 0x12FC4927: gdata_parsable_get_json (gdata-parsable.c:686)
==20266==    by 0x12FB8DED: gdata_service_update_entry (gdata-service.c:1608)
==20266==    by 0x1302EC93: gdata_tasks_service_update_task (gdata-tasks-service.c:592)
Comment 1 Philip Withnall 2014-06-20 09:50:00 UTC
Created attachment 278824 [details] [review]
core: Fix a small memory leak in a date parsing function
Comment 2 Philip Withnall 2014-06-20 09:51:07 UTC
Attachment 278824 [details] pushed as 8e2b404 - core: Fix a small memory leak in a date parsing function